--- a/flexibble/package.json
+++ b/flexibble/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
