--- a/package.json
+++ b/package.json
@@ -1,5 +1,44 @@
 {
+  "name": "nextjs",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "prettier": "^2.8.8"
+    "@headlessui/react": "^1.7.15",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "20.3.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "cloudinary": "^1.37.3",
+    "eslint-config-next": "13.4.7",
+    "graphql-request": "^6.1.0",
+    "husky": "^8.0.3",
+    "jsonwebtoken": "^9.0.0",
+    "next": "13.4.7",
+    "next-auth": "^4.22.1",
+    "postcss": "8.4.24",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@grafbase/sdk": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^36.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.6"
   }
 }
