--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@grafbase/sdk": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "encoding": "^0.1.13",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
